automatically backed up by learn

--- a/views/friends.erb
+++ b/views/friends.erb
@@ -10,7 +10,7 @@
     <h1>My Super Cool Friends List</h1>
 
       <% @friends.each do |friend| %>
-        <h2><%=  %></h2>
+        <h2><%= friend %></h2>
       <% end %>
 
   </body>
